[package]
name = "capacity_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.5.4", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy", "serde"] }
proc-macro2 = { version = "1.0.82", features = ["span-locations"] }
quote = "1.0.36"
syn = { version = "2.0.61", features = ["full", "extra-traits", "visit"] }
thiserror = "1.0.60"
